# Live-Chat-k8s

./: .gitignore  README.md  _temp.sh  build.sh  config.sh  config.yaml  destroy.sh  pyproject.toml  requirements.md
helm/app-chart/: Chart.yaml
helm/app-chart/templates/: autoscalers.yaml  backend-deployment.yaml  flask-secret.yaml  (+5 more)
helm/aws-lb-controller-serviceaccount-chart/: Chart.yaml
helm/ebs-csi-controller-serviceaccount-chart/: Chart.yaml
helm/ingress-chart/: Chart.yaml
helm/rabbitmq-messagebroker-chart/: Chart.yaml
helm/rabbitmq-serviceaccount-chart/: Chart.yaml
helm/redis-messagebroker-chart/: Chart.yaml
helm/redis-userstate-chart/: Chart.yaml
helm/redis-userstate-sentinel-chart/: Chart.yaml
helm/sa-chart/: Chart.yaml
helm/service-account-chart/: Chart.yaml
manifests/: aws-load-balancer-controller-service-account.yaml  backend-deployment.yaml  flask-secret.yaml  ingress.yaml  redis-deployment.yaml  ui-deployment.yaml
scripts/: create_certificate.sh  install_alb_controller.sh  load_config.sh  push_image.sh  push_images.sh  util.sh
src/: docker-compose.yml  nginx.conf
src/backend/: Dockerfile  app.py  backend.py  chat_manager.py  util.py
src/frontend/: Dockerfile  frontend.py  frontend_service.py
src/lobby/: lobby_service.py
src/socket/: websocket_service.py
src/ui/: Dockerfile  app.py
terraform/: alb.tf  cert.tf  config.sh  config.tfvars  ebs_csi_driver.tf  ecr.tf  eks.tf  load_balancing.tf  outputs.tf  providers.tf  security_groups.tf  terraform.tfvars  variables.tf  vpc.tf
terraform/scripts/: apply_kube.sh  push_image.sh
(+48 files in other folders)
