[tool.poetry]
name = "chat-app"
version = "0.1.0"
description = ""
authors = ["Hemmo Karja <hemmo.karja@sok.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
flask = "^3.0.3"
flask-socketio = "^5.3.7"
redis = "^5.1.0"
gevent = "^24.2.1"
requests = "^2.32.3"
gunicorn = "^23.0.0"
kombu = "^5.4.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
